--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 body{
     background-color: lightseagreen;
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    margin: 0px;
+    padding: 0px;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 1px solid #ddd;
+    margin: 0px auto;
 }
