--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,10 @@ body{
     border: 1px solid #ddd;
     margin: 0px auto;
 }
+
+#footer{
+    background: grey;
+    color: white;
+    text-align: center;
+    border: 1px solid blue;
+}
